# llm-from-scratch

./: .gitattributes  Cargo.toml  README.md  compress-vocab  decompress-vocab  vocab.json
src/: dataset.rs  main.rs  model.rs  tokenizer.rs  training.rs
