[package]
name = "llm-from-scratch"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = {version="0.21.0", features=["train", "autodiff", "wgpu"]}
indicatif = {version="0.18.4", features=["rayon"]}
rand = "0.8"
rayon = "1.11.0"
regex = "1.12.3"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
